[tool.poetry]
name = "hiel"
version = "0.0.1"
description = "a command line utility for bootstrapping projects with git"
authors = ["Bolaji Olajide <cooproton@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
